src/RTPLParser.java
// Generated from C:/Users/vrasa/IdeaProjects/RTPL\RTPL.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RTPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, CONST_NUM=28, CONST_STR=29, ID=30, SLC=31, 
		MLC=32, WS=33;
	public static final int
		RULE_program = 0, RULE_funcdef = 1, RULE_vardef = 2, RULE_type = 3, RULE_block = 4, 
		RULE_statement = 5, RULE_other_stm = 6, RULE_if_stm = 7, RULE_if_stm_else = 8, 
		RULE_expr = 9, RULE_expr_assign = 10, RULE_expr_or = 11, RULE_expr_or_tmp = 12, 
		RULE_expr_and = 13, RULE_expr_and_tmp = 14, RULE_expr_eq = 15, RULE_expr_eq_tmp = 16, 
		RULE_expr_cmp = 17, RULE_expr_cmp_tmp = 18, RULE_expr_add = 19, RULE_expr_add_tmp = 20, 
		RULE_expr_mult = 21, RULE_expr_mult_tmp = 22, RULE_expr_un = 23, RULE_expr_func = 24, 
		RULE_expr_func_tmp = 25, RULE_expr_other = 26, RULE_while_stm = 27, RULE_return_stm = 28, 
		RULE_break_stm = 29;
	public static final String[] ruleNames = {
		"program", "funcdef", "vardef", "type", "block", "statement", "other_stm", 
		"if_stm", "if_stm_else", "expr", "expr_assign", "expr_or", "expr_or_tmp", 
		"expr_and", "expr_and_tmp", "expr_eq", "expr_eq_tmp", "expr_cmp", "expr_cmp_tmp", 
		"expr_add", "expr_add_tmp", "expr_mult", "expr_mult_tmp", "expr_un", "expr_func", 
		"expr_func_tmp", "expr_other", "while_stm", "return_stm", "break_stm"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "','", "')'", "'='", "'string'", "'boolean'", "'int'", "'float'", 
		"'{'", "'}'", "';'", "'if'", "'else'", "'||'", "'&&'", "'=='", "'!='", 
		"'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'!'", "'while'", "'return'", 
		"'break'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "CONST_NUM", "CONST_STR", "ID", "SLC", "MLC", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RTPL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RTPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<FuncdefContext> funcdef() {
			return getRuleContexts(FuncdefContext.class);
		}
		public FuncdefContext funcdef(int i) {
			return getRuleContext(FuncdefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				funcdef();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public TypeContext ret;
		public Token func_name;
		public TypeContext t1;
		public TypeContext t2;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(RTPLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RTPLParser.ID, i);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterFuncdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitFuncdef(this);
		}
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			ArrayList<Type> inputTypes = new ArrayList<Type>();
			setState(66);
			((FuncdefContext)_localctx).ret = type();
			setState(67);
			((FuncdefContext)_localctx).func_name = match(ID);
			setState(68);
			match(T__0);
			setState(82);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << ID))) != 0)) {
				{
				setState(69);
				((FuncdefContext)_localctx).t1 = type();
				setState(70);
				match(ID);
				inputTypes.add(((FuncdefContext)_localctx).t1.retType);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(72);
					match(T__1);
					setState(73);
					((FuncdefContext)_localctx).t2 = type();
					setState(74);
					match(ID);
					inputTypes.add(((FuncdefContext)_localctx).t2.retType);
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(84);
			match(T__2);
			setState(85);
			block();

			        System.out.print("Function " + ((FuncdefContext)_localctx).func_name.getText() + " : " );
			        if (inputTypes.size() == 0) System.out.print("NO_INPUT");
			        else {
			            for (int i=0;i<inputTypes.size();i++){
			                if (i==0) System.out.print(inputTypes.get(i).getType());
			                else System.out.print(", " + inputTypes.get(i).getType());
			            }
			        }
			        System.out.println(" -> " + ((FuncdefContext)_localctx).ret.retType.getType());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardefContext extends ParserRuleContext {
		public TypeContext t;
		public Token ID;
		public List<Token> vars = new ArrayList<Token>();
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(RTPLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RTPLParser.ID, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public VardefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterVardef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitVardef(this);
		}
	}

	public final VardefContext vardef() throws RecognitionException {
		VardefContext _localctx = new VardefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vardef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			((VardefContext)_localctx).t = type();
			setState(89);
			((VardefContext)_localctx).ID = match(ID);
			((VardefContext)_localctx).vars.add(((VardefContext)_localctx).ID);
			setState(92);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(90);
				match(T__3);
				setState(91);
				expr();
				}
			}

			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(94);
				match(T__1);
				setState(95);
				((VardefContext)_localctx).ID = match(ID);
				((VardefContext)_localctx).vars.add(((VardefContext)_localctx).ID);
				setState(98);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(96);
					match(T__3);
					setState(97);
					expr();
					}
				}

				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 for (Token var:((VardefContext)_localctx).vars) System.out.println("Variable " + var.getText() + " : " + ((VardefContext)_localctx).t.retType.getType()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type retType;
		public TerminalNode CONST_NUM() { return getToken(RTPLParser.CONST_NUM, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		try {
			setState(119);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(T__4);
				setState(109);
				match(T__0);
				setState(110);
				match(CONST_NUM);
				setState(111);
				match(T__2);
				((TypeContext)_localctx).retType =  Type.String;
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(T__5);
				((TypeContext)_localctx).retType =  Type.Boolean;
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				match(T__6);
				((TypeContext)_localctx).retType =  Type.Int;
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(117);
				match(T__7);
				((TypeContext)_localctx).retType =  Type.Float;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__8);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__11) | (1L << T__20) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << CONST_NUM) | (1L << CONST_STR) | (1L << ID))) != 0)) {
				{
				{
				setState(122);
				statement();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public If_stmContext if_stm() {
			return getRuleContext(If_stmContext.class,0);
		}
		public Other_stmContext other_stm() {
			return getRuleContext(Other_stmContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			switch (_input.LA(1)) {
			case T__11:
				{
				setState(130);
				if_stm();
				}
				break;
			case T__0:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__20:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case CONST_NUM:
			case CONST_STR:
			case ID:
				{
				setState(131);
				other_stm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Other_stmContext extends ParserRuleContext {
		public VardefContext vardef() {
			return getRuleContext(VardefContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public While_stmContext while_stm() {
			return getRuleContext(While_stmContext.class,0);
		}
		public Return_stmContext return_stm() {
			return getRuleContext(Return_stmContext.class,0);
		}
		public Break_stmContext break_stm() {
			return getRuleContext(Break_stmContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Other_stmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other_stm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterOther_stm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitOther_stm(this);
		}
	}

	public final Other_stmContext other_stm() throws RecognitionException {
		Other_stmContext _localctx = new Other_stmContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_other_stm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(134);
				vardef();
				setState(135);
				match(T__10);
				}
				break;
			case 2:
				{
				setState(137);
				expr();
				setState(138);
				match(T__10);
				}
				break;
			case 3:
				{
				setState(140);
				while_stm();
				}
				break;
			case 4:
				{
				setState(141);
				return_stm();
				setState(142);
				match(T__10);
				}
				break;
			case 5:
				{
				setState(144);
				break_stm();
				setState(145);
				match(T__10);
				}
				break;
			case 6:
				{
				setState(147);
				block();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_stmContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public If_stm_elseContext if_stm_else() {
			return getRuleContext(If_stm_elseContext.class,0);
		}
		public If_stmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterIf_stm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitIf_stm(this);
		}
	}

	public final If_stmContext if_stm() throws RecognitionException {
		If_stmContext _localctx = new If_stmContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_stm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(150);
				match(T__11);
				setState(151);
				match(T__0);
				setState(152);
				expr();
				setState(153);
				match(T__2);
				setState(154);
				statement();
				}
				break;
			case 2:
				{
				setState(156);
				match(T__11);
				setState(157);
				match(T__0);
				setState(158);
				expr();
				setState(159);
				match(T__2);
				setState(160);
				if_stm_else();
				setState(161);
				match(T__12);
				setState(162);
				statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_stm_elseContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<If_stm_elseContext> if_stm_else() {
			return getRuleContexts(If_stm_elseContext.class);
		}
		public If_stm_elseContext if_stm_else(int i) {
			return getRuleContext(If_stm_elseContext.class,i);
		}
		public Other_stmContext other_stm() {
			return getRuleContext(Other_stmContext.class,0);
		}
		public If_stm_elseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stm_else; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterIf_stm_else(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitIf_stm_else(this);
		}
	}

	public final If_stm_elseContext if_stm_else() throws RecognitionException {
		If_stm_elseContext _localctx = new If_stm_elseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_if_stm_else);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			switch (_input.LA(1)) {
			case T__11:
				{
				setState(166);
				match(T__11);
				setState(167);
				match(T__0);
				setState(168);
				expr();
				setState(169);
				match(T__2);
				setState(170);
				if_stm_else();
				setState(171);
				match(T__12);
				setState(172);
				if_stm_else();
				}
				break;
			case T__0:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__20:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case CONST_NUM:
			case CONST_STR:
			case ID:
				{
				setState(174);
				other_stm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Type retType;
		public Expr_assignContext expr_assign() {
			return getRuleContext(Expr_assignContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			expr_assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_assignContext extends ParserRuleContext {
		public Type retType;
		public Expr_orContext expr_or() {
			return getRuleContext(Expr_orContext.class,0);
		}
		public Expr_assignContext expr_assign() {
			return getRuleContext(Expr_assignContext.class,0);
		}
		public Expr_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterExpr_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitExpr_assign(this);
		}
	}

	public final Expr_assignContext expr_assign() throws RecognitionException {
		Expr_assignContext _localctx = new Expr_assignContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr_assign);
		try {
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(179);
				expr_or();
				setState(180);
				match(T__3);
				setState(181);
				expr_assign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(183);
				expr_or();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_orContext extends ParserRuleContext {
		public Type retType;
		public Expr_andContext expr_and() {
			return getRuleContext(Expr_andContext.class,0);
		}
		public Expr_or_tmpContext expr_or_tmp() {
			return getRuleContext(Expr_or_tmpContext.class,0);
		}
		public Expr_orContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_or; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterExpr_or(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitExpr_or(this);
		}
	}

	public final Expr_orContext expr_or() throws RecognitionException {
		Expr_orContext _localctx = new Expr_orContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expr_or);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			expr_and();
			setState(187);
			expr_or_tmp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_or_tmpContext extends ParserRuleContext {
		public Expr_andContext expr_and() {
			return getRuleContext(Expr_andContext.class,0);
		}
		public Expr_or_tmpContext expr_or_tmp() {
			return getRuleContext(Expr_or_tmpContext.class,0);
		}
		public Expr_or_tmpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_or_tmp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).enterExpr_or_tmp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RTPLListener ) ((RTPLListener)listener).exitExpr_or_tmp(this);
		}
	}

	public final Expr_or_tmpContext expr_or_tmp() throws RecognitionException {
		Expr_or_tmpContext _localctx = new Expr_or_tmpContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expr_or_tmp);
		try {
			setState(194);
			switch (_input.LA(1)) {
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				match(T__13);
				setState(190);
				expr_and();
				setState(191);
				expr_or_tmp();
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
